UV Editing slowdown depends on Outliner Setting #33296

Closed
opened 2012-11-25 03:12:37 +01:00 by Carlo Andreacchio · 5 comments

%%%Hi There,

I have a file i am working on atm, which has about 5000+ objects some which are heavily instanced... and this does not including particle systems for object duplication.

When moving the UVs of a unique mesh... If the outliner is visible & the setting is on 'All Scenes' there is a performance drop compared to 'Selected Only'

I would like to apologize I cant upload my working file, I have tried to replicate the issue but i dont get as much of a slowdown in my working file... There is still a slowdown that is apparent, but not as great as my working file (i get 1 frame per second instead of about 8 frames per second in this test file). If you just mouse over the UV editor, and press g, look at the framerate, then switch to selected only in the outliner and press g again, and notice the difference.

I have zipped the file to reduce the upload space.

I am running a GTX 580, core i7 920 & windows 7 64bit.

Regards

Carlo
%%%

%%%Hi There, I have a file i am working on atm, which has about 5000+ objects some which are heavily instanced... and this does not including particle systems for object duplication. When moving the UVs of a unique mesh... If the outliner is visible & the setting is on 'All Scenes' there is a performance drop compared to 'Selected Only' I would like to apologize I cant upload my working file, I have tried to replicate the issue but i dont get as much of a slowdown in my working file... There is still a slowdown that is apparent, but not as great as my working file (i get 1 frame per second instead of about 8 frames per second in this test file). If you just mouse over the UV editor, and press g, look at the framerate, then switch to selected only in the outliner and press g again, and notice the difference. I have zipped the file to reduce the upload space. I am running a GTX 580, core i7 920 & windows 7 64bit. Regards Carlo %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed the unnecessary redrawing of the outliner now, should make uv editing faster. The outliner drawing here is incredibly slow though, I remember there being some known issue here, but didn't have time yet to check if that's indeed what causing it.%%%

%%%Fixed the unnecessary redrawing of the outliner now, should make uv editing faster. The outliner drawing here is incredibly slow though, I remember there being some known issue here, but didn't have time yet to check if that's indeed what causing it.%%%

%%%Thanks for the fast fix Brecht!%%%

%%%Thanks for the fast fix Brecht!%%%

%%%The slow outliner here seems to be a known issue, is on the todo list. It would be good to fix this soon but not considering it a bug.%%%

%%%The slow outliner here seems to be a known issue, is on the todo list. It would be good to fix this soon but not considering it a bug.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33296
No description provided.