Fix #33296: uv editing did unnecessary outliner redraw, giving slowdown.